welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:5: error: type mismatch;
 found   : Unit
 required: Boolean
if(avance){
   ^